--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@hello-pangea/dnd": "^16.3.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-context-menu": "^2.1.5",
+		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.6",
@@ -30,6 +31,7 @@
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
+		"chart.js": "^4.4.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"crypto-ts": "^1.0.2",
@@ -39,11 +41,12 @@
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.277.0",
 		"mongodb": "^6.1.0",
-		"next": "^13.5.4",
+		"next": "^14.0.1",
 		"next-auth": "^4.23.1",
 		"next-themes": "^0.2.1",
 		"postcss": "^8.4.31",
 		"react": "18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-day-picker": "^8.8.2",
 		"react-dom": "18.2.0",
 		"react-markdown": "^8.0.7",
